# kitt

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  TODO.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  docs.yaml
agent-package/: pyproject.toml
agent-package/src/kitt_agent/: __init__.py  cli.py  config.py  daemon.py  docker_ops.py  engine_ops.py  hardware.py  heartbeat.py  log_streamer.py  model_storage.py  preflight.py  registration.py
agent-package/tests/: test_heartbeat.py
changelog/: index.html
concepts/: index.html
concepts/architecture/: index.html
concepts/benchmark-system/: index.html
concepts/engine-lifecycle/: index.html
concepts/hardware-fingerprinting/: index.html
concepts/karr/: index.html
concepts/security/: index.html
configs/campaigns/: dgx-spark-full.yaml  example.yaml  rerun-failures.yaml  scheduled_example.yaml
configs/engines/: llama_cpp.yaml  ollama.yaml  parameter_mapping.yaml  tgi.yaml  vllm.yaml
configs/suites/: performance.yaml  quick.yaml  standard.yaml
docker/agent/: Dockerfile
docker/llama_cpp/: Dockerfile.arm64  Dockerfile.spark
docker/monitoring/: docker-compose.yaml
docker/tgi/: Dockerfile.spark
docker/vllm/: Dockerfile.arm64
docker/web/: Dockerfile  docker-compose.yml
docs/: changelog.md  index.md
docs/concepts/: architecture.md  benchmark-system.md  engine-lifecycle.md  hardware-fingerprinting.md  index.md  karr.md  security.md
docs/getting-started/: docker-quickstart.md  first-benchmark.md  index.md  installation.md
docs/guides/: agents.md  benchmarks.md  bots.md  campaigns.md  charts.md  ci-integration.md  deployment.md  dgx-spark.md  engines.md  index.md  monitoring.md  plugins.md  remote-execution.md  results.md  web-dashboard.md
docs/reference/: api.md  database.md  docker-files.md  environment.md  index.md
getting-started/: index.html
getting-started/docker-quickstart/: index.html
getting-started/first-benchmark/: index.html
getting-started/installation/: index.html
guides/: index.html
guides/agents/: index.html
guides/benchmarks/: index.html
guides/bots/: index.html
guides/campaigns/: index.html
guides/charts/: index.html
guides/ci-integration/: index.html
guides/deployment/: index.html
guides/dgx-spark/: index.html
guides/engines/: index.html
guides/monitoring/: index.html
guides/plugins/: index.html
guides/remote-execution/: index.html
guides/results/: index.html
guides/web-dashboard/: index.html
reference/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/configuration/: index.html
reference/database/: index.html
reference/docker-files/: index.html
reference/environment/: index.html
scripts/: benchmark_campaign.py
search/: search_index.json
src/kitt/: __init__.py  __main__.py
tests/integration/: test_git_lfs.py
tests/test_benchmarks/: test_base.py  test_batch_inference.py  test_coding.py  test_dataset_manager.py  test_function_calling.py  test_loader.py  test_long_context.py  test_multiturn.py  test_performance.py  test_prompt_robustness.py  test_quality.py  test_rag_pipeline.py  test_speculative.py  test_streaming_latency.py  test_tensor_parallel.py  test_vlm_benchmark.py
tests/test_bot/: test_commands.py  test_discord_bot.py  test_slack_bot.py
tests/test_campaign/: test_auto_compare.py  test_devon_bridge.py  test_dynamic_campaign.py  test_gated_model_checker.py  test_gguf_discovery.py  test_metrics_exporter.py  test_models.py  test_notifications.py  test_parallel_runner.py  test_query_builder.py  test_runner.py  test_scheduler.py  test_scheduler_cron.py  test_state_manager.py
tests/test_ci/: test_github.py  test_report_formatter.py
tests/test_cli/: test_campaign_commands.py  test_compare_tui.py  test_engine_commands.py
tests/test_collectors/: test_gpu_stats.py  test_power_monitor.py
tests/test_config/: test_loader.py  test_models.py
tests/test_devon/: test_client.py  test_config.py
tests/test_engines/: test_base.py  test_docker_manager.py  test_dockerfiles.py  test_exllamav2_engine.py  test_health_recovery.py  (+9 more)
(+296 files in other folders)
