[tool.poetry]
name = "kitt"
version = "1.7.0"
description = "KITT (Kirizan's Inference Testing Tools) - End-to-end testing suite for LLM inference engines"
authors = ["Kirizan"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "kitt", from = "src"}]

[tool.poetry.scripts]
kitt = "kitt.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"
click = "^8.1"
pydantic = "^2.0"
py-cpuinfo = "^9.0"
psutil = ">=5.9"
nvidia-ml-py = ">=12.535"
gitpython = "^3.1"
rich = ">=13.0"
datasets = {version = ">=2.19", optional = true}
flask = {version = "^3.1", optional = true}
textual = {version = "^7.5", optional = true}
pyarrow = {version = ">=14.0", optional = true}
psycopg2-binary = {version = ">=2.9", optional = true}
slack-bolt = {version = ">=1.18", optional = true}
"discord.py" = {version = ">=2.3", optional = true}
matplotlib = {version = ">=3.7", optional = true}
cryptography = {version = ">=43.0", optional = true}
httpx = {version = ">=0.27", optional = true}

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = ">=9.5"
mkdocstrings = {version = ">=0.24", extras = ["python"]}
mkdocs-click = ">=0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^6.0"
pytest-mock = "^3.12"
pytest-timeout = "^2.4.0"
ruff = ">=0.8"
mypy = "^1.10"
types-pyyaml = "^6.0.12.20250915"

[tool.poetry.extras]
datasets = ["datasets"]
web = ["flask", "cryptography"]
cli_ui = ["textual"]
devon = ["httpx"]
parquet = ["pyarrow"]
postgres = ["psycopg2-binary"]
slack = ["slack-bolt"]
discord = ["discord.py"]
charts = ["matplotlib"]
all = ["datasets", "flask", "cryptography", "textual", "pyarrow", "psycopg2-binary", "slack-bolt", "discord.py", "matplotlib", "httpx"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
timeout = 30

[tool.coverage.run]
source = ["kitt"]

[tool.coverage.report]
show_missing = true
fail_under = 40

[tool.ruff]
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
no_implicit_optional = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
