[project]
name = "kitt-agent"
version = "1.1.0"
description = "KITT thin agent — receives Docker orchestration commands from a KITT server"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
    "flask>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "py-cpuinfo>=9.0",
    "click>=8.1",
]

[project.optional-dependencies]
gpu = ["nvidia-ml-py>=12.535"]

[project.scripts]
kitt-agent = "kitt_agent.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
